--- a/ecommerce/main/templates/main/base.html
+++ b/ecommerce/main/templates/main/base.html
@@ -82,7 +82,7 @@
                                         <li><a href="javascript:void(0)"><i class="fa fa-dashboard"></i>Profile</a></li>
                                         <li><a href="{% url 'reset_password' %}"><i class="fa fa-unlock-alt"></i>Forgot
                                                 Password</a></li>
-                                        <li><a href="{% url 'logout_user' %}"><i class="fa fa-sign-out"></i>Log Out</a></li>
+                                        <li><a href="{% url 'logout' %}"><i class="fa fa-sign-out"></i>Log Out</a></li>
 
                                     </ul>
                                 </div>          
