--- a/ecommerce/main/templates/main/login.html
+++ b/ecommerce/main/templates/main/login.html
@@ -31,23 +31,29 @@
             <div class="col-xl-4 col-lg-6 col-md-8 offset-xl-4 offset-lg-3 offset-md-2">
                 <div class="theme-card">
                     <h3 class="text-center">Login</h3>
-                    <form class="theme-form" method="post">
+                    <form class="theme-form"  method="POST">
                         {% csrf_token %}
                         <div class="form-group">
-                            <label>Email</label>
-                            <input type="text" class="form-control" placeholder="Email" required="">
+                            <label>Email</label><br>
+                            {{form.username}}
+
                         </div>
                         <div class="form-group">
-                            <label>Password</label>
-                            <input type="password" class="form-control" placeholder="Enter your password" required="">
+                            <label>Password</label><br>
+                            {{form.password}}
                         </div>
                         <button type="submit" class="btn btn-normal">Login</button>
-                        <a class="float-end txt-default mt-2" href="forget-pwd.html">Forgot your password?</a>
+                        <a class="float-end txt-default mt-2" href="{% url 'reset_password' %}">Forgot your password?</a>
                         {{form.non_field_errors}}
+                        {{form.errors}}
+                        {% for message in messages %}
+                        {{message}}
+
+                        {% endfor %}
                     </form>
                     <p class="mt-3">Sign up for a free account at our store. Registration is quick and easy. It allows
                         you to be able to order from our shop. To start shopping click register.</p>
-                    <a href="register.html" class="txt-default pt-3 d-block">Create an Account</a>
+                    <a href="{% url 'register' %}" class="txt-default pt-3 d-block">Create an Account</a>
                 </div>
             </div>
         </div>
