--- a/ecommerce/main/templates/main/register.html
+++ b/ecommerce/main/templates/main/register.html
@@ -9,27 +9,36 @@
             <div class="col-lg-4 offset-lg-4">
                 <div class="theme-card">
                     <h3 class="text-center">Create account</h3>
-                    <form class="theme-form">
+                    <form class="theme-form" method="POST">
+                        {% csrf_token %}
                         <div class="row g-3">
                             <div class="col-md-12 form-group">
-                                <label for="email">First Name</label>
-                                <input type="text" class="form-control" id="fname" placeholder="First Name" required="">
+                                <label for="email">user_name</label><br>
+                                {{form.username}}
+                               
                             </div>
-                            <div class="col-md-12 form-group">
-                                <label for="review">Last Name</label>
-                                <input type="text" class="form-control" id="lname" placeholder="Last Name" required="">
-                            </div>
+  
                         </div>
                         <div class="row g-3">
                             <div class="col-md-12 form-group">
-                                <label >email</label>
-                                <input type="text" class="form-control"  placeholder="Email" required="">
+                                <label >email</label><br>
+                                {{form.email}}
                             </div>
                             <div class="col-md-12 form-group">
-                                <label >Password</label>
-                                <input type="password" class="form-control"  placeholder="Enter your password" required="">
+                                <label >Password</label><br>
+                                {{form.password1}}
+
+                              
                             </div>
-                            <div class="col-md-12 form-group"><a href="javascript:void(0)" class="btn btn-normal">create Account</a></div>
+                            <div class="col-md-12 form-group">
+                                <label >confirm Password</label><br>
+                                {{form.password2}}
+
+                              
+                            </div>
+                            <!-- <div class="col-md-12 form-group"><a href="javascript:void(0)" class="btn btn-normal">create Account</a></div> -->
+                            <div class="col-md-12 form-group"><input type="submit" value="create Account" class="btn btn-normal"/></div>
+
                         </div>
                         <div class="row g-3">
                             <div class="col-md-12 ">
@@ -37,6 +46,7 @@
                             </div>
                         </div>
                     </form>
+                    {{form.errors}}
                 </div>
             </div>
         </div>
